tests/ui/snapshots/ui__test_status__status_view_clean.snap
---
source: tests/ui/test_status.rs
expression: terminal.backend()
---
"┌───────────────────────────── Tij - Status View ──────────────────────────────┐"
"│                                                                              │"
"│                            Working copy is clean.                            │"
"│                                                                              │"
"│                              No modified files.                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
