tests/ui/snapshots/ui__test_status__status_view_commit_input.snap
---
source: tests/ui/test_status.rs
expression: terminal.backend()
---
"┌───────────────────────────── Tij - Status View ──────────────────────────────┐"
"│ Working copy: kxryzmql                                                       │"
"│ Parent:       mzvwqtsr                                                       │"
"│                                                                              │"
"│ > M src/main.rs                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ [Enter] Save  [Esc] Cancel ──────────────────────────────────────────────────┐"
"│Commit message: fix: resolve login bug                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
