tests/ui/snapshots/ui__test_status__status_view_loading.snap
---
source: tests/ui/test_status.rs
expression: terminal.backend()
---
"┌───────────────────────────── Tij - Status View ──────────────────────────────┐"
"│                                                                              │"
"│                                  Loading...                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
