tests/ui/snapshots/ui__test_status__status_view_with_conflicts.snap
---
source: tests/ui/test_status.rs
expression: terminal.backend()
---
"┌───────────────────────────── Tij - Status View ──────────────────────────────┐"
"│ Working copy: kxryzmql                                                       │"
"│ Parent:       mzvwqtsr                                                       │"
"│ Conflicts: 2 files                                                           │"
"│                                                                              │"
"│ > C src/main.rs [conflict]                                                   │"
"│   C src/lib.rs [conflict]                                                    │"
"│   M README.md                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
